--- a/GetItDone/Base.lproj/Main.storyboard
+++ b/GetItDone/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -21,35 +22,53 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Wb3-tl-S2i" userLabel="Task Table View">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="104" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Wb3-tl-S2i" userLabel="Task Table View">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" textLabel="G7x-Pv-AUq" detailTextLabel="cSg-2o-gBX" style="IBUITableViewCellStyleSubtitle" id="mf4-25-qf2">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" rowHeight="104" id="mf4-25-qf2" customClass="TaskTableViewCell" customModule="GetItDone" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="104"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="mf4-25-qf2" id="jud-y8-prX">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="103"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="G7x-Pv-AUq">
-                                                    <rect key="frame" x="15" y="4" width="34" height="21"/>
-                                                    <autoresizingMask key="autoresizingMask"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="0.0"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="taskNameLabel" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GIx-Kr-dfi">
+                                                    <rect key="frame" x="8" y="8" width="367" height="17"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="cSg-2o-gBX">
-                                                    <rect key="frame" x="15" y="25" width="44" height="15"/>
-                                                    <autoresizingMask key="autoresizingMask"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="priorityLabel" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Sm-u1-epa">
+                                                    <rect key="frame" x="8" y="37" width="359" height="17"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="taskCompletedLabel" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ebX-xk-oXx">
+                                                    <rect key="frame" x="8" y="62" width="359" height="17"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstItem="6Sm-u1-epa" firstAttribute="leading" secondItem="jud-y8-prX" secondAttribute="leadingMargin" id="3Rd-dE-w7h"/>
+                                                <constraint firstItem="GIx-Kr-dfi" firstAttribute="leading" secondItem="jud-y8-prX" secondAttribute="leading" constant="8" id="IsD-dd-3HR"/>
+                                                <constraint firstAttribute="trailing" secondItem="GIx-Kr-dfi" secondAttribute="trailing" id="LTa-Pa-xL2"/>
+                                                <constraint firstItem="ebX-xk-oXx" firstAttribute="trailing" secondItem="jud-y8-prX" secondAttribute="trailingMargin" id="PnS-Bz-irX"/>
+                                                <constraint firstItem="ebX-xk-oXx" firstAttribute="top" secondItem="6Sm-u1-epa" secondAttribute="bottom" constant="8" id="SfI-0j-8Ql"/>
+                                                <constraint firstItem="6Sm-u1-epa" firstAttribute="top" secondItem="GIx-Kr-dfi" secondAttribute="bottom" constant="12" id="Ttb-1M-FUY"/>
+                                                <constraint firstItem="6Sm-u1-epa" firstAttribute="trailing" secondItem="jud-y8-prX" secondAttribute="trailingMargin" id="Yta-ir-EOS"/>
+                                                <constraint firstItem="GIx-Kr-dfi" firstAttribute="top" secondItem="jud-y8-prX" secondAttribute="top" constant="8" id="eYa-JE-hQY"/>
+                                                <constraint firstItem="ebX-xk-oXx" firstAttribute="leading" secondItem="jud-y8-prX" secondAttribute="leadingMargin" id="xzl-Dz-UNH"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                         <connections>
+                                            <outlet property="priorityZoneLabel" destination="6Sm-u1-epa" id="YeJ-h1-hCo"/>
+                                            <outlet property="taskCompletedLabel" destination="ebX-xk-oXx" id="A0g-pY-Kr7"/>
+                                            <outlet property="taskNameLabel" destination="GIx-Kr-dfi" id="fbC-Ao-t85"/>
                                             <segue destination="6qv-W4-V3g" kind="show" identifier="segueToEdit" id="Mh7-8m-enZ"/>
                                         </connections>
                                     </tableViewCell>
@@ -76,7 +95,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="908" y="124"/>
+            <point key="canvasLocation" x="908" y="123.68815592203899"/>
         </scene>
         <!--Task-->
         <scene sceneID="jhb-1G-bS0">
@@ -90,7 +109,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="V3Y-FS-pKu" userLabel="Task Name Text Field">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Task Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="V3Y-FS-pKu" userLabel="Task Name Text Field">
                                 <rect key="frame" x="16" y="66" width="318" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.96338934409999999" green="1" blue="0.76826753020000005" alpha="1" colorSpace="calibratedRGB"/>
@@ -98,7 +117,7 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="c4s-AE-lda" userLabel="Priority Zone Text Field">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="priority 1 - 9" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="c4s-AE-lda" userLabel="Priority Zone Text Field">
                                 <rect key="frame" x="16" y="104" width="318" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.96338934409999999" green="1" blue="0.76826753020000005" alpha="1" colorSpace="calibratedRGB"/>
@@ -106,7 +125,7 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gbg-4e-o6f" userLabel="Task Completed Text Field">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="complete - yes/no" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gbg-4e-o6f" userLabel="Task Completed Text Field">
                                 <rect key="frame" x="16" y="142" width="318" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.96338934409999999" green="1" blue="0.76826753020000005" alpha="1" colorSpace="calibratedRGB"/>
@@ -119,8 +138,17 @@
                     </view>
                     <toolbarItems/>
                     <navigationItem key="navigationItem" title="Task" id="Ixn-aH-Gq5">
-                        <barButtonItem key="rightBarButtonItem" title="Save" id="cbG-OL-5XF"/>
+                        <barButtonItem key="rightBarButtonItem" title="Save" id="cbG-OL-5XF">
+                            <connections>
+                                <action selector="savePressedWithButton:" destination="6qv-W4-V3g" id="Q44-5p-54s"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="priorityZoneTextField" destination="c4s-AE-lda" id="Xr3-9Q-NqS"/>
+                        <outlet property="taskCompletedTextField" destination="gbg-4e-o6f" id="4BH-R6-XSg"/>
+                        <outlet property="taskNameTextField" destination="V3Y-FS-pKu" id="LkZ-og-8XR"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0MD-ja-LG2" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
